# cgen

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yaml  pyproject.toml  pytest.ini  run.sh
.github/workflows/: CI.yaml
datasets/: mbpp.jsonl  prompt_template.toml
output/: results.csv
src/: dependency_container.py  load_data_trainings.py  main.py  summarize_results.py  train_model.py
src/ai/: __init__.py  openai_provider.py  prompt.py  prompt_template.py  retriever.py
src/config/: settings.py
src/db/: __init__.py  models.py  session.py  trainings.py
src/evaluation/: code_evaluator.py  code_executor.py  solution_result.py
src/tot/: node.py  three_of_thoughts.py
src/utils/: data_loader.py  logger.py
tests/ai/: test_openai_provider.py  test_prompt_template.py
tests/evaluation/: test_code_evaluator.py  test_code_executor.py  test_solution_result.py
tests/tot/: test_three_of_thoughts.py
