[tool.poetry]
name = "cgen"
version = "0.2.0"
description = "A project for generating code using Tree of Thoughts and OpenAI GPT models"
authors = ["Thiago Valentim <thiago.s.valentim@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/valentim/cgen"
repository = "https://github.com/valentim/cgen"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10.12,<4.0"
openai = "1.35.7"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
SQLAlchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
langchain-openai = "^0.1.14"
pgvector = "^0.3.0"
injector = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pytest-cov = "*"
pytest = "7.1.2"
types-toml = "^0.10.8"
types-tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cgen = "cli:main"